--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -58,6 +58,26 @@ body{
     outline: 2px solid #f2f2f2;
 }
 
+.salas__input{
+    text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+
+.salas__input > select{
+    border: none;
+    padding: 5px;
+    margin-top: 20px;
+    font-size: 0.85rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: #121212;
+    color: #f2f2f2;
+    outline: none;
+    border-radius: 5px;
+}
+
 .login__button{
     color: #121212;
     border: none;
